--- a/dobutsu_shogi/static/css/style.css
+++ b/dobutsu_shogi/static/css/style.css
@@ -1,5 +1,5 @@
 body{
-	margin: 50px;
+	margin: 20px;
 	font-size: 30px;
 	text-decoration: bold;
 }
@@ -8,20 +8,31 @@ body{
 	text-align: center;
 }
 
-
 td{
-    border-radius: 10px;
-    /*-moz-border-radius: 20px;*/
-	width: 150px;
-	height: 150px;
+    border-radius: 8px;
+    height: 150px;
+    width: 150px;
 	border: 2px solid black;
 	text-align: center;
 	font-family: "Arial Black", Gadget, sans-serif;
 }
 
+.cell{
+	padding: 0;
+	margin: 0;
+	font-size: 0;
+	line-height: 0;
+}
+
 .button{
 	margin-top: 50px;
 	text-align: center;
+}
+
+img{
+	-ms-transform: scale(0.8, 0.8);
+	-webkit-transform: scale(0.8, 0.8);
+	transform: scale(0.8, 0.8);
 }
 
 .play{
@@ -48,10 +59,48 @@ button {
 /*button:focus {outline:0;}*/
 .board{
 	float: left;
+	/*
+	margin-right: 10px;
+	margin-left: 80px;
+	*/
+	position: relative;
+}
+
+h6 {
+	margin-left: 22px;
+}
+
+.opponent{
+	display: inline-block;
+	float: left;
+	/*width: 70px;*/
+	width: 120px;
+	
+	line-height: 0;
+}
+
+.opponent img{
+	transform: scale(0.5, 0.5);
+	margin-top:0px;
+}
+
+.player{
+	display: inline-block;
+	float: left;
+	position: relative;
+	width: 120px;
+	line-height: 0;
+}
+
+.player img {
+	transform: scale(0.5, 0.5);
+	margin-top: 0px;
 }
 
 .output{
-	float:right;
+	float:left;
+	display: inline-block;
+	margin-left: 100px;
 }
 
 textarea{
@@ -62,6 +111,7 @@ textarea{
 .container{
 	padding: 5px;
 	min-height: 650px;
+	
 }
 
 .reset{
